# cross-runtime-exceptions

./: .gitignore  .gitmodules
doc/: crash-report.md
src/cpp-exceptions/: CMakeLists.txt  main.cpp
src/csharp-app/csharp-app/: csharp-app.sln
src/csharp-app/csharp-app/csharp-app/: CPPException.NativeMethods.cs  Program.cs  csharp-app.csproj
src/native-exceptions/: CMakeLists.txt  main.cpp  native-exceptions.cpp  native-exceptions.h
src/native-exceptions-handler/: handler.cpp  main.cpp
